# file-counter

./: Cargo.toml
src/: core.rs  main.rs
